--- a/Comedian Soundboard.WindowsPhone/AudioPage.xaml
+++ b/Comedian Soundboard.WindowsPhone/AudioPage.xaml
@@ -62,7 +62,7 @@
             </Grid>
         </StackPanel>
 
-        <Grid DataContext="{Binding Category}" Grid.Row="1" Margin="0,10,0,0">
+        <Grid DataContext="{Binding Category}" Grid.Row="1" Margin="0,10,0,-49">
             <GridView x:Name="AudioGridView"
                 IsItemClickEnabled="True"
                 ItemsSource="{Binding SoundItems}"
