--- a/Comedian Soundboard.WindowsPhone/ImagePage.xaml
+++ b/Comedian Soundboard.WindowsPhone/ImagePage.xaml
@@ -26,12 +26,18 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
+
+        <StackPanel x:Name="LoadingPanel" Margin="0,-8,0,0">
+            <ProgressBar IsIndeterminate="True"></ProgressBar>
+            <TextBlock Margin="5,0,0,0" FontSize="12">Loading...</TextBlock>
+        </StackPanel>
         
         <ListView x:Name="ImageListView"
                   Margin="0,0,0,-49"
                   SelectionMode="None"
                   ItemsSource="{Binding Images}"
-                  IsItemClickEnabled="True">
+                  IsItemClickEnabled="True"
+                  Opacity="0">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment"
